force-app/main/default/objects/Opportunity/fields/CustoEstimadoProjeto__c.field-meta.xml
<CustomField>
    <fullName>CustoEstimadoProjeto__c</fullName>
    <label>Custo Estimado do Projeto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>