force-app/main/default/objects/Opportunity/fields/CustomerDocSign__c.field-meta.xml
<CustomField>
    <fullName>CustomerDocSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomerDocSign</label>
    <type>Checkbox</type>
</CustomField>