force-app/main/default/objects/Opportunity/fields/CustomerFileAttachment__c.field-meta.xml
<CustomField>
    <fullName>CustomerFileAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that indicates whether there is a client agreement document related to the Opportunity.</description>
    <label>CustomerFileAttachment</label>
    <type>Checkbox</type>
</CustomField>