force-app/main/default/objects/Opportunity/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <label>Data Início</label>
    <type>Date</type>
</CustomField>