force-app/main/default/objects/Opportunity/fields/Lead_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Lead_CNPJ__c</fullName>
    <formula>Lead__r.CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead CNPJ</label>
    <type>Text</type>
</CustomField>