force-app/main/default/objects/Opportunity/fields/SignedDocument__c.field-meta.xml
<CustomField>
    <fullName>SignedDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control field to ensure that the Digital Signature email is sent only once.</description>
    <label>Email Signed Document</label>
    <type>Checkbox</type>
</CustomField>