force-app/main/default/objects/Opportunity/fields/TempoEstimadoProjeto__c.field-meta.xml
<CustomField>
    <fullName>TempoEstimadoProjeto__c</fullName>
    <inlineHelpText>O tempo é estimado em semanas, a fim de facilitar o mapeamento das sprints do projeto.</inlineHelpText>
    <label>Tempo estimado do projeto (em semanas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>