force-app/main/default/objects/Opportunity/validationRules/BloquearEdicaoAposClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEdicaoAposClosedWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISCHANGED(Name) ||
    ISCHANGED(DataInicio__c) ||
    ISCHANGED(CloseDate) ||
    ISCHANGED(Amount) ||
    ISCHANGED(ProjectTechnology__c) ||
    ISCHANGED(CustoEstimadoProjeto__c)
)</errorConditionFormula>
    <errorMessage>Não é permitido alterar os dados da oportunidade após ela ter sido marcada como Closed Won.</errorMessage>
</ValidationRule>