force-app/main/default/objects/Opportunity/validationRules/ObrigaContaClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaContaClosedWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISBLANK(AccountId) 
)</errorConditionFormula>
    <errorMessage>É necessário ter uma Conta para fechar a Oportunidade como ganha.</errorMessage>
</ValidationRule>