force-app/main/default/objects/Opportunity/validationRules/ValidaAnexoDeAcordo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaAnexoDeAcordo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Formalization&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;)
    ),
    NOT(CustomerFileAttachment__c)
)</errorConditionFormula>
    <errorMessage>É necessário anexar o documento de &quot;de acordo&quot; à Oportunidade.</errorMessage>
</ValidationRule>