force-app/main/default/objects/Opportunity/validationRules/ValidaNegociacaoValorProposta.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaNegociacaoValorProposta</fullName>
    <active>true</active>
    <description>Necessário preencher o Valor da Proposta e Custo Estimado.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(StageName , &apos;Qualification&apos;)),
    OR(
       ISBLANK(Amount),
       ISBLANK(CustoEstimadoProjeto__c)
      ) 
)</errorConditionFormula>
    <errorMessage>Necessário preencher o Valor da Proposta e Custo Estimado.</errorMessage>
</ValidationRule>