force-app/main/default/objects/Opportunity/validationRules/ValidaPropostaAssinada.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPropostaAssinada</fullName>
    <active>true</active>
    <description>Valida se o usuário anexou a Proposta Assinada por ambas as partes.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    NOT(CustomerDocSign__c)
)</errorConditionFormula>
    <errorMessage>Para finalizar a Oportunidade, é necessário anexar a Proposta Assinada pelo cliente.</errorMessage>
</ValidationRule>